syntax = "proto3";

option csharp_namespace = "OWTournamentsHistory.Api.Proto";

package common;


message Point2D {
    oneof x {
        string x_string = 1;
        int32 x_int = 2;
        DecimalValue x_decimal = 3;
    }
    optional DecimalValue y = 4;
}

message Point2DWithLabel {
      oneof x {
        string x_string = 1;
        int32 x_int = 2;
        DecimalValue x_decimal = 3;
    }
    string label = 4;
    optional DecimalValue y = 5;
}


// Example: 12345.6789 -> { units = 12345, nanos = 678900000 }
message DecimalValue {

    // Whole units part of the amount
    int64 units = 1;

    // Nano units of the amount (10^-9)
    // Must be same sign as units
    sfixed32 nanos = 2;
}

enum PlayerRole {
    UNKNOWN_PLAYER_ROLE = 0;
    FLEX = 1;
    TANK = 2;
    DPS = 3;
    SUPPORT = 4;
}

enum PlayerSubRole {
    UNKNOWN_PLAYER_SUB_ROLE = 0;
    MAIN_TANK = 1;
    OFF_TANK = 2;
    HITSCAN_DPS = 3;
    PROJECTILE_DPS = 4;
    MAIN_HEAL = 5;
    LIGHT_HEAL = 6;
}